# fusion-erp

./: .env.example  .gitignore  .npmignore  AJUSTE-MATRICULA-PLANO-TURMA.md  APLICAR-ATUALIZACAO-GITHUB.txt  APLICAR-CORRECAO.cmd  ATUALIZACAO-COBRANCA-AUTOMATICA.md  ATUALIZACAO-PILOTO-2026-07-17.txt  COMO-INICIAR-ESTA-VERSAO.txt  COMO-TESTAR-ENTREGA-ENXUTA.md  CORRECAO-BIOMETRIA-ACESSO-CATRACA.md  CREDENCIAIS-INICIAIS-FUSION-ERP.txt  INICIAR-FUSION-ACCESS-AGENT.bat  INICIAR-FUSION-BIOMETRIA-ESTAVEL.bat  INICIAR-FUSION-LOCAL.bat  INICIAR-FUSIONERP-LIMITE-CATRACA.bat  INICIAR-FUSIONERP-MATRICULA-CHAT.bat  INSTALACAO-PONTE-RENDER-CATRACA.txt  INSTALAR-E-INICIAR-FLUXO-BIOMETRIA-HENRY.bat  INSTRUCOES-PUBLICAR-SUPABASE.txt  LEIA-ME-APLICACAO.txt  LEIA-ME-APLICAR.txt  LEIA-ME-ATUALIZACAO-ACESSO-NATIVO.txt  LEIA-ME-DIA-VENCIMENTO.txt  LEIA-ME-FINANCEIRO-ESTRUTURADO.txt  LEIA-ME-INSTALACAO.txt  LEIA-ME-MOBILE.txt  LEIA-ME-RESET-DADOS.txt  LEIA-ME.txt  MANIFESTO-ENTREGA.txt  PATCH_ACESSO_NATIVO_MANIFESTO.json  PATCH_MANIFEST.json  README.md  README_PATCH.md  RELATORIO-LIMITE-DIARIO-CATRACA-PORTAL-ALUNO.md  RELATORIO-MATRICULA-RECEBIMENTO-E-CHAT.md  Resetar Fusion ERP.bat  TESTAR_INICIALIZACAO_ETAPA_16.bat  VERIFICAR-BIOMETRIA.bat  WHATSAPP-META-CONFIGURAR.txt  (+9 more)
tools/fusion-access-native/: CMakeLists.txt  GUIA-OPERADOR.txt  THIRD_PARTY_NOTICES.txt
tools/fusion-access-native/installer/: FusionAccessSetup.iss
tools/fusion-access-native/legacy/: FusionAccessAgent.ps1
tools/fusion-access-native/runtime/: ATIVAR.ps1  DESINSTALAR-SERVICO.ps1  FusionAccessSupervisor.ps1  (+3 more)
(+977 files in other folders)
